k8s/prod/pihole/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  defaultBackend:
    service:
      name: pihole-web
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - pihole
